@@ -1,2 +1,0 @@
-class Admin::ProductsController < Admin::ApplicationController
-end
